--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,19 +1,7 @@
 <view class="container">
-    <swiper class="banner" 	indicator-dots 	indicator-color='#fff' 	indicator-active-color='#000'>
-        <swiper-item>
-            <image src="/static/images/nvsheng.jpg"></image>
-        </swiper-item>
-        <swiper-item>
-            <image src="/static/images/nvsheng.jpg"></image>
-        </swiper-item>
-        <swiper-item>
-            <image src="/static/images/nvsheng.jpg"></image>
-        </swiper-item>
-        <swiper-item>
-            <image src="/static/images/nvsheng.jpg"></image>
-        </swiper-item>
-        <swiper-item>
-            <image src="/static/images/nvsheng.jpg"></image>
+    <swiper class="banner" indicator-dots indicator-color='#fff' indicator-active-color='#000'>
+        <swiper-item wx:for="{{bannerList}}" wx:key="bannerId">
+            <image src="{{item.pic}}"></image>
         </swiper-item>
     </swiper>
     <view class="nav">
@@ -38,40 +26,33 @@
             <view>直播</view>
         </view>
     </view>
-    <view class="recommend">
-        <view class="header">
-            <text class="title">推荐歌曲</text>
-            <view>
-                <text>为你精心推荐</text>
-                <text class="more">查看更多</text>
-            </view>
+    <view class="padding">
+
+        <view class="recommend">
+            <NavHeader title="推荐歌曲" nav="为你精心推荐"></NavHeader>
+            <scroll-view scroll-x="true" scroll-y="false" enable-flex="true" class="scroll_view">
+                <view class="scroll_item" wx:for="{{reccomendList}}" wx:key="id">
+                    <image src="{{item.picUrl}}"></image>
+                    <text>{{item.name}}</text>
+                </view>
+            </scroll-view>
         </view>
-        <scroll-view scroll-x="true" enable-flex="true" class="scroll_view">
-            <view class="scroll_item">
-                <image src="/static/images/nvsheng.jpg"></image>
-                <text>我是陈骏泽帅气有才无敌好先生，没错，他就是一个帅气有才无敌男</text>
-            </view>
-            <view class="scroll_item">
-                <image src="/static/images/nvsheng.jpg"></image>
-                <text>我是陈骏泽帅气有才无敌好先生，没错，他就是一个帅气有才无敌男</text>
-            </view>
-            <view class="scroll_item">
-                <image src="/static/images/nvsheng.jpg"></image>
-                <text>我是陈骏泽帅气有才无敌好先生，没错，他就是一个帅气有才无敌男</text>
-            </view>
-            <view class="scroll_item">
-                <image src="/static/images/nvsheng.jpg"></image>
-                <text>我是陈骏泽帅气有才无敌好先生，没错，他就是一个帅气有才无敌男</text>
-            </view>
-            <view class="scroll_item">
-                <image src="/static/images/nvsheng.jpg"></image>
-                <text>我是陈骏泽帅气有才无敌好先生，没错，他就是一个帅气有才无敌男</text>
-            </view>
-            <view class="scroll_item">
-                <image src="/static/images/nvsheng.jpg"></image>
-                <text>我是陈骏泽帅气有才无敌好先生，没错，他就是一个帅气有才无敌男</text>
-            </view>
-            
-        </scroll-view>
+        <view class="topList">
+            <NavHeader title="排行榜" nav="热歌风向标"></NavHeader>
+            <swiper class="topListSwiper" circular="true" >
+                <swiper-item class="topListItem" wx:for="{{topList}}" wx:key="name">
+                    <view class="title">{{item.name}}</view>
+                    <view class="musicItem" wx:for="{{item.tracks}}" wx:key="id" wx:for-item="musicItem" wx:for-index="musicIndex">
+                        <image src="{{musicItem.al.picUrl}}"></image>
+                        <text class="musicCount">{{musicIndex+1}}</text>
+                        <text class="musicName">{{musicItem.name}}</text>
+                    </view>
+                   
+                </swiper-item>
+                
+                
+            </swiper>
+        </view>
     </view>
+
 </view>
