--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -2,8 +2,8 @@
     <view class="user-section">
         <image src="/static/images/personal/bgImg2.jpg"></image>
         <view class="avatar" bindtap="toLogin">
-            <image src="/static/images/logo.png"></image>
-            <text>游客</text>
+            <image src="{{userInfo.avatarUrl?userInfo.avatarUrl:'/static/images/logo.png'}}"></image>
+            <text>{{userInfo.nickname?userInfo.nickname:"游客"}}</text>
         </view>
         <view class="vip-card">
             <image class="card-bg" src="/static/images/personal/vip-card-bg.png"></image>
