--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -11,11 +11,11 @@
                 立即开通
             </view>
             <view class="icon">
-                <text class="iconfont icon-huiyuan-">硅谷会员</text>
+                <text class="iconfont icon-huiyuan-">黄金会员</text>
             </view>
             <view class="content">
-                <text>atguigu Union</text>
-                <text>听歌 撸代码</text>
+                <text>听歌是一种习惯</text>
+                
             </view>
         </view>
     </view>
@@ -47,8 +47,18 @@
                 </view>
             </view>
             <view class="personal-content">
-                <view class="personal-content-item">
+                <view class="personal-content-item playList">
                     <text class="title">最近播放</text>
+                    <view>
+                        <scroll-view wx:if="{{playList.length}}" scroll-x scroll-y="false" enable-flex>
+                            <view class="playList-item" wx:for="{{playList}}" wx:key="id">
+                                <image src="{{item.song.al.picUrl}}"></image>
+                            </view>
+                        </scroll-view>
+                        <view wx:else>
+                            暂无播放记录
+                        </view>
+                    </view>
                 </view>
                 <view class="personal-content-item">
                     <text class="title">我的音乐</text>
