--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -21,12 +21,15 @@
     width: 100rpx;
     height: 100rpx;
     vertical-align: middle;
+    margin-right: 20rpx;
+    border-radius: 20rpx;
 }
 .container .user-section .avatar text{
     display: inline-block;
     line-height: 100rpx;
+    height: 100rpx;
     text-align: center;
-    width: 100rpx;
+    width: 500rpx;
     vertical-align: middle;
 }
 .container .user-section .vip-card{
@@ -89,9 +92,9 @@
 }
 .container .cover-container .cover-content{
     width: 100%;
-    height: 720rpx;
+    
     background-color: #f5f5f5;
-    margin-top: -8rpx;
+    margin-top: -10rpx;
     overflow: hidden;
 }
 .container .cover-container .cover-content .nav{
@@ -125,7 +128,18 @@
 }
 .cover-container .cover-content .personal-content .personal-content-item{
     width: 100%;
-    height: 100rpx;
+    
     line-height: 100rpx;
     text-align: center;
+}
+.cover-container .cover-content .personal-content .playList view scroll-view {
+    display: flex;
+    flex-direction: row;
+    height: 200rpx;
+}
+.cover-container .cover-content .personal-content .playList view scroll-view .playList-item image{
+    width: 200rpx;
+    height: 200rpx;
+    margin: 0 10rpx 0 10rpx;
+    border-radius: 20rpx;
 }
