--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -1,1 +1,42 @@
-/* pages/video/video.wxss */
+.videoContainer .header {
+    display: flex;
+    padding: 10rpx;
+    margin-top: 10rpx;
+}
+.videoContainer .header image{
+    width: 60rpx;
+    height: 60rpx;
+}
+.videoContainer .header view{
+    height: 60rpx;
+    margin: 0 20rpx;
+    border: 1rpx solid #eee;
+    border-radius: 30rpx;
+    line-height: 60rpx;
+    flex: 1;
+    text-align: center;
+    color: #aaa;
+}
+.videoContainer .scroll-view {
+    display: flex;
+    flex-direction: row;
+    margin: 20rpx;
+    white-space: nowrap;
+}
+.videoContainer .scroll-view .scroll-main .scroll-item{
+    margin: 0 20rpx;
+    padding: 10rpx 0;
+}
+.videoContainer .scroll-view .active{
+    border-bottom: 4rpx solid #666;
+}
+
+.videoContainer .video-scroll .video-item {
+    padding: 0 3%;
+}
+
+.videoContainer .video-scroll .video-item video{
+    width:100%;
+    height: 360rpx;
+    border-radius: 30rpx;
+}
